# ufsg

./: .gitignore  Cargo.toml  IDEAS.md  rustfmt.toml
assets/shaders/: tiles.wgsl
assets/sprites/: tiles.tsx
src/: camera.rs  debug.rs  main.rs  sprites.rs  tilemap.rs
src/debug/: console.rs
src/tilemap/: array.rs  chunk.rs  debug.rs  edit.rs  generate.rs  neighbors.rs  render.rs
